# renderer

./: .gitignore  CMakeLists.txt  README  update_translations.bash
src/: CMakeLists.txt
src/raytracer/: CMakeLists.txt  rt.cu  rt.cuh
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  clipboard.cpp  clipboard.hpp  engine.cpp  engine.hpp  framebufferrenderer.cpp  framebufferrenderer.hpp  main.cpp  qmlinstance.hpp  renderer.qrc  renderer.ru_RU.ts  rendererinterface.cpp  rendererinterface.hpp  renderitem.cpp  renderitem.hpp
src/renderer/qml/: renderer_qml.qrc  ui.qml
src/renderer/qml/components/: CenteredDialog.qml
src/utility/: CMakeLists.txt  utility.hpp
